codenvy-1629: fix double scroll and add privew url in invoice list

--- a/dashboard/src/app/billing/invoices/list-invoices.styl
+++ b/dashboard/src/app/billing/invoices/list-invoices.styl
@@ -1,6 +1,12 @@
 .invoices-content
   margin 0px
   padding 0px
+  height 100%
+  overflow hidden
 
   .price-details
     color $primary-color
+
+.che-list-actions .invoice-action
+  min-width 16px
+  padding 0 1px
